# ray-tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  ray.h  rtweekend.h  sphere.h  triangle.h  vec3.h
